test_regress/t/t_randomize_method_nclass_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain.
// SPDX-FileCopyrightText: 2023 Wilson Snyder
// SPDX-License-Identifier: CC0-1.0

module t;
   initial begin
      randomize(1);
      srandom(1);
   end
endmodule
